## $Id$
AUTOMAKE_OPTIONS=foreign no-dependencies

noinst_LIBRARIES = libspo.a

libspo_a_SOURCES = \
spo_alert_arubaaction.c spo_alert_arubaaction.h \
spo_alert_bro.c spo_alert_bro.h \
spo_alert_cef.c spo_alert_cef.h \
spo_alert_csv.c spo_alert_csv.h \
spo_alert_fast.c spo_alert_fast.h \
spo_alert_full.c spo_alert_full.h \
spo_alert_prelude.c spo_alert_prelude.h \
spo_alert_syslog.c spo_alert_syslog.h \
spo_alert_test.c spo_alert_test.h \
spo_alert_unixsock.c spo_alert_unixsock.h \
spo_common.c spo_common.h \
spo_log_ascii.c spo_log_ascii.h \
spo_log_null.c spo_log_null.h \
spo_log_tcpdump.c spo_log_tcpdump.h \
spo_platypus.c spo_platypus.h \
spo_sguil.c spo_sguil.h \
spo_database.c spo_database.h \
spo_alert_cu.c spo_alert_cu.h \
spo_alert_cu_cpp.cpp spo_alert_cu_cpp.h \
spo_alert_cu_kt.cpp spo_alert_cu_kt.h \
spo_alert_cu_kt_mod.cpp spo_alert_cu_kt_mod.h \
spo_alert_cu_util.cpp spo_alert_cu_util.h \
spo_alert_cu_client.cpp spo_alert_cu_client.h spo_alert_cu_manager.cpp spo_alert_cu_alert.cpp \
spo_alert_cu_interface.h \
ktcommon.h \
kthttp.h \
ktplugserv.h \
ktrpc.h \
ktsocket.cc \
kttimeddb.cc \
ktutil.cc \
ktdbext.cc \
ktplugdb.cc \
ktremotedb.cc ktsocket.h    kttimeddb.h   ktutil.h \
ktdbext.h     ktplugdb.h    ktremotedb.h  ktshlib.cc    ktthserv.cc   ktulog.cc \
kthttp.cc     ktplugserv.cc ktrpc.cc      ktshlib.h     ktthserv.h    ktulog.h \
myscript.h myscript.cc

INCLUDES = -I.. -I ../sfutil
